Event api's added + bug fixes
