# swagger.yml
@@ -101,10 +101,32 @@ paths:
           description: Limit of posts per page
         - in: query
           name: sort
-          description: Sort by (popular or recent)
+          description: Sort by popular (default) or recent
       responses:
         '200':
           description: Posts Fetched Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /events:
+    get:
+      tags:
+        - Common
+      summary: Get all events
+      parameters:
+        - in: query
+          name: page
+          description: Page Number
+        - in: query
+          name: limit
+          description: Limit of events per page
+        - in: query
+          name: sort
+          description: Sort by - popular (default) or recent
+      responses:
+        '200':
+          description: Events Fetched Successfully
         '401':
           description: Unauthorized
         '500':
@@ -364,8 +386,6 @@ paths:
       tags:
         - Comment
       summary: Get all comments of a post
-      security:
-        - bearerAuth: []
       parameters:
         - in: path
           name: postId
@@ -485,6 +505,119 @@ paths:
           description: Unauthorized
         '500':
           description: Internal Server Error
+  /event/create:
+    post:
+      tags:
+        - Event
+      summary: Create an event
+      requestBody:
+        $ref: '#/components/requestBodies/CreateEvent'
+      responses:
+        '200':
+          description: Event Created Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /event/fetch/{eventId}:
+    get:
+      tags:
+        - Event
+      summary: Get a particular event
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: eventId
+          description: Event ID
+          schema:
+            type: string
+            format: ObjectId
+      responses:
+        '200':
+          description: Event Fetched Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /event/update/{eventId}:
+    put:
+      tags:
+        - Event
+      summary: Update an event
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: eventId
+          description: Event ID
+          schema:
+            type: string
+            format: ObjectId
+      requestBody:
+        $ref: '#/components/requestBodies/UpdateEvent'
+      responses:
+        '200':
+          description: Event Updated Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /event/delete/{eventId}:
+    delete:
+      tags:
+        - Event
+      summary: Delete an event
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: eventId
+          description: Event ID
+          schema:
+            type: string
+            format: ObjectId
+      responses:
+        '200':
+          description: Event Deleted Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /event/fetchLive:
+    get:
+      tags:
+        - Event
+      summary: Get all live events
+      responses:
+        '200':
+          description: Live Events Fetched Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  /event/register/{eventId}:
+    put:
+      tags:
+        - Event
+      summary: Register for an event
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: eventId
+          description: Event ID
+          schema:
+            type: string
+            format: ObjectId
+      responses:
+        '200':
+          description: Event Registered Successfully
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
+  
 components:
   schemas:
     User:
@@ -707,6 +840,46 @@ components:
       properties:
         comment:
           type: string
+    CreateEventInput:
+      type: object
+      properties:
+        title:
+          type: string
+          required: true
+        description:
+          type: string
+          required: true
+        isOnline:
+          type: boolean
+          default: true
+        location:
+          type: string
+        meetingLink:
+          type: string
+        dateTime:
+          type: string
+          format: date-time
+          required: true
+        imageURL:
+          type: string
+    UpdateEventInput:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        isOnline:
+          type: boolean
+        location:
+          type: string
+        meetingLink:
+          type: string
+        dateTime:
+          type: string
+          format: date-time
+        imageURL:
+          type: string
   securitySchemes:
     bearerAuth:
       name: Authorization
@@ -763,3 +936,15 @@ components:
           schema:
             $ref: '#/components/schemas/CreateCommentInput'
         description: Create Comment
+    CreateEvent:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CreateEventInput'
+        description: Create Event
+    UpdateEvent:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UpdateEventInput'
+        description: Update Event
